--- a/templates/process.conf.j2
+++ b/templates/process.conf.j2
@@ -1,9 +1,9 @@
-;This file is managed by ansible any changes here may be lost...
+;This file is managed by ansible, any changes here may be lost...
 
 [{{ item.name }}]
 
 user = {{ item.user }}
 group = {{ item.group }}
 
-{% item.conf %}
+{{ item.conf }}
 
