--- a/templates/process.conf.j2
+++ b/templates/process.conf.j2
@@ -5,5 +5,9 @@
 user = {{ item.user }}
 group = {{ item.group }}
 
+listen = {{ item.listen }}
+listen.user = {{ item.user }}
+listen.group = {{ item.group }}
+
 {{ item.conf }}
 
